Delete Button Added

--- a/Backend/templates/adminPage.html
+++ b/Backend/templates/adminPage.html
@@ -87,6 +87,7 @@
         </li>
 
 
+        
 
     </ul>
 
@@ -121,7 +122,7 @@
         <div class="container">
 
             <!-- Uploaded Image -->
-        <img id="imagePreview" src="" alt="Picture">
+        <img id="imagePreview" src="" alt="Picture" required>
         </div>
 
         <div>
@@ -206,6 +207,7 @@
     </script>
 
     <script src="{{ url_for('static', filename='/JS/adminPageScript.js') }}"></script>
+
 
 
     </script>
