Delete Movie Added

--- a/Backend/templates/BookNowNew.html
+++ b/Backend/templates/BookNowNew.html
@@ -81,7 +81,7 @@
           <div class="col">
     <ul class="list-inline mx-auto justify-content-center" >
         <li >
-            <a href="/"><button type="button" class="btn btn-success text-start"
+        <button type="button" class="btn btn-success text-start"
                     style="width: 400px; height: 400px; font-size: 20px;">
                     <br>
                     Theater Name:
@@ -109,7 +109,7 @@
         </li>
             
         
-        </button></a>
+        </button>
     
     </ul>
     </div>
@@ -117,17 +117,17 @@
     </div>
 </div>
   <script>
-      function random_bg_color() {
-    var x = Math.floor(Math.random() * 256);
-    var y = Math.floor(Math.random() * 256);
-    var z = Math.floor(Math.random() * 256);
-    var bgColor = "rgb(" + x + "," + y + "," + z + ")";
- console.log(bgColor);
+//     function random_bg_color() {
+//     var x = Math.floor(Math.random() * 256);
+//     var y = Math.floor(Math.random() * 256);
+//     var z = Math.floor(Math.random() * 256);
+//     var bgColor = "rgb(" + x + "," + y + "," + z + ")";
+//  console.log(bgColor);
   
-    document.getElementById('tileBox').style.background = bgColor;
-    }
+//     document.getElementById('tileBox').style.background = bgColor;
+//     }
 
-random_bg_color();
+// random_bg_color();
   </script> 
 
     <!------------------------------------------------------------------------------------------------------------>
