--- a/Backend/templates/adminPage.html
+++ b/Backend/templates/adminPage.html
@@ -40,7 +40,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <marquee behavior="alternate" direction="left" scrollamount="18">
-                <h1 style="color: rgb(255, 255, 255); font-family: serif; margin-right: 700px;" class="Dashboard">Admin</h1>
+                <h1 style="color: rgb(255, 255, 255); font-family: serif; margin-right: 700px;" class="Dashboard">Admin
+                </h1>
             </marquee>
         </div>
     </nav>
@@ -88,10 +89,10 @@
 
         <li class="nav-item">
             <button id="deleteMovie" type="button" class="btn btn-success text-center pad"
-                    style="width: 300px; height: 200px;  font-size: 30px;">Delete</button>
+                style="width: 300px; height: 200px;  font-size: 30px;">Delete Movies</button>
         </li>
 
-        
+
 
     </ul>
 
@@ -233,12 +234,12 @@
           <button type="button" id="closebtn" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           
           </div>
-        <form action = "/owner_upload" method = "POST">
+        <form action = "/deleteMovie" method = "POST">
         
         
         <div id="addTheaterContainer">
         
-        <input class="form_field mb-3" type="text" name="theaterId" id="theaterId" placeholder="Id of Theater" autofocus="true"/> </br>
+        <input class="form_field mb-3" type="text" name="moviename" id="movieID" placeholder="Id of Movie" autofocus="true"/> </br>
         
 
         </div>
