--- a/Backend/templates/adminPage.html
+++ b/Backend/templates/adminPage.html
@@ -49,6 +49,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
+        
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
@@ -63,13 +64,13 @@
 
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a href="/"><button type="button" class="btn btn-success text-center pad"
+            <a href="/"><button type="button" class="btn btn-success text-center pad" 
                     style="width: 300px; height: 200px; font-size: 30px;">Home</button></a>
         </li>
 
 
         <li class="nav-item">
-            <button type="button" id="addTheater" class="btn btn-success text-center pad"
+            <button type="button" id="addTheater" class="btn btn-success text-center pad" 
                 style="width: 300px; height: 200px;  font-size: 30px;">Add Theater</button>
         </li>
 
@@ -177,7 +178,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="movoieModalLabel">${title}</h5>
-          <button type="button" id="closebtn" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" id="closebtn" data-bs-dismiss="modal" aria-label="Close"></button>
           
           </div>
         <form action = "/owner_upload" method = "POST">
@@ -256,7 +257,7 @@
             modal.show();
         }
 
-
+       
 
     </script>
 
