--- a/Backend/templates/genericpage.html
+++ b/Backend/templates/genericpage.html
@@ -29,7 +29,7 @@
 
         <div class="innerdiv2">
             <div id="movieName">{{row[2]}}</div>
-            <a href="/BookNowNew"><button type="button" class="btn btn-danger me-md-2 booknow">
+            <a href="/BookTheater"><button type="button" class="btn btn-danger me-md-2 booknow">
                     Book Now</button></a>
         </div>
 
