--- a/Backend/templates/SeatBooking.html
+++ b/Backend/templates/SeatBooking.html
@@ -8,10 +8,133 @@
     <title>Movie Seat Booking</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/SeatBooking.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 
+    <style>
+        .inputGroup {
+            background-color: #fff;
+            display: block;
+            margin: 10px 0;
+            position: relative;
+        }
+
+        .inputGroup label {
+            padding: 12px 30px;
+            width: 100%;
+            display: block;
+            text-align: left;
+            color: #3c454c;
+            cursor: pointer;
+            position: relative;
+            z-index: 2;
+            transition: color 200ms ease-in;
+            overflow: hidden;
+        }
+
+        .inputGroup label:before {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            content: "";
+            background-color: #5562eb;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%) scale3d(1, 1, 1);
+            transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+            opacity: 0;
+            z-index: -1;
+        }
+
+        .inputGroup label:after {
+            width: 32px;
+            height: 32px;
+            content: "";
+            border: 2px solid #d1d7dc;
+            background-color: #fff;
+            background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+            background-repeat: no-repeat;
+            background-position: 2px 3px;
+            border-radius: 50%;
+            z-index: 2;
+            position: absolute;
+            right: -34px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            transition: all 200ms ease-in;
+        }
+
+        .inputGroup input:checked~label {
+            color: #fff;
+        }
+
+        .inputGroup input:checked~label:before {
+            transform: translate(-50%, -50%) scale3d(56, 56, 1);
+            opacity: 1;
+        }
+
+        .inputGroup input:checked~label:after {
+            background-color: #54e0c7;
+            border-color: #54e0c7;
+        }
+
+        .inputGroup input {
+            width: 32px;
+            height: 32px;
+            order: 1;
+            z-index: 2;
+            position: absolute;
+            right: 30px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            visibility: hidden;
+        }
+
+        .form {
+            padding: 0 16px;
+            max-width: 550px;
+            margin: 50px auto;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 36px;
+        }
+
+        body {
+            background-color: #d1d7dc;
+            font-family: "Fira Sans", sans-serif;
+        }
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: inherit;
+        }
+
+        html {
+            box-sizing: border-box;
+        }
+
+        code {
+            background-color: #9aa3ac;
+            padding: 0 8px;
+        }
+    </style>
 </head>
 
 <body>
+    <!-- <form class="form"> -->
+
+
+
+    <!-- </form> -->
+
+
+
+
+
+
 
     <div>
         <img class="main-logo" src="{{ url_for('static', filename='/Images/img1.jpg') }}" />
@@ -42,81 +165,106 @@
         </li>
     </ul>
 
+    <form action="/paynow" method="POST">
+
     <div class="container">
         <div class="screen" id="display">BookYourShow</div>
 
-        <div class="row">
-            <div id="seat1" class="seat" data-price="50" onclick="ChangeColor('seat1')">A1</div>
-            <div id="seat2" class="seat" onclick="ChangeColor('seat2')">A2</div>
-            <div id="seat3" class="seat" onclick="ChangeColor('seat3')">A3</div>
-            <div id="seat4" class="seat" onclick="ChangeColor('seat4')">A4</div>
-            <div id="seat5" class="seat" onclick="ChangeColor('seat5')">A5</div>
-            <div id="seat26" class="seat" onclick="ChangeColor('seat26')">A6</div>
-            <div id="seat27" class="seat" onclick="ChangeColor('seat27')">A7</div>
-            <div id="seat28" class="seat" onclick="ChangeColor('seat28')">A8</div>
 
-        </div>
-        <div class="row">
-            <div id="seat6" class="seat" onclick="ChangeColor('seat6')">B1</div>
-            <div id="seat7" class="seat" onclick="ChangeColor('seat7')">B2</div>
-            <div id="seat8" class="seat" onclick="ChangeColor('seat8')">B3</div>
+            <div class="row">
+                {%for i in range(0, 8)%}
+                <!-- <h1>{{i}}</h1> -->
+                <!-- <button id="seat1" name="seat1" class="seat" data-price="50"
+                onclick="ChangeColor('seat1')">A{{i+1}}</button> -->
 
-            <div id="seat" class="seat occupied">B4</div>
-            <div id="seat" class="seat occupied">B5</div>
 
-            <div id="seat9" class="seat" onclick="ChangeColor('seat9')">B6</div>
-            <div id="seat10" class="seat" onclick="ChangeColor('seat10')">B7</div>
-            <div id="seat11" class="seat" onclick="ChangeColor('seat11')">B8</div>
+                <div class="inputGroup">
+                    <input id="option1{{i+1}}" name="seat1{{i+1}}" type="checkbox" value = "A{{i+1}}"/>
+                    <label for="option1{{i+1}}">A{{i+1}}</label>
+                </div> &emsp;
+                {%endfor%}
 
-        </div>
-        <div class="row">
-            <div id="seat12" class="seat" onclick="ChangeColor('seat12')">C1</div>
-            <div id="seat13" class="seat" onclick="ChangeColor('seat13')">C2</div>
-            <div id="seat14" class="seat" onclick="ChangeColor('seat14')">C3</div>
-            <div id="seat15" class="seat" onclick="ChangeColor('seat15')">C4</div>
-            <div id="seat16" class="seat" onclick="ChangeColor('seat16')">C5</div>
-            <div id="seat17" class="seat" onclick="ChangeColor('seat17')">C6</div>
+            </div>
 
-            <div id="seat" class="seat occupied">C7</div>
-            <div id="seat" class="seat occupied">C8</div>
-        </div>
-        <div class="row">
-            <div id="seat18" class="seat" onclick="ChangeColor('seat18')">D1</div>
-            <div id="seat19" class="seat" onclick="ChangeColor('seat19')">D2</div>
-            <div id="seat20" class="seat" onclick="ChangeColor('seat20')">D3</div>
-            <div id="seat21" class="seat" onclick="ChangeColor('seat21')">D4</div>
-            <div id="seat22" class="seat" onclick="ChangeColor('seat22')">D5</div>
-            <div id="seat23" class="seat" onclick="ChangeColor('seat23')">D6</div>
-            <div id="seat24" class="seat" onclick="ChangeColor('seat24')">D7</div>
-            <div id="seat25" class="seat" onclick="ChangeColor('seat25')">D8</div>
+            <div class="row">
+                {%for i in range(0, 8)%}
 
-        </div>
-        <div class="row">
-            <div id="seat29" class="seat" onclick="ChangeColor('seat29')">E1</div>
-            <div id="seat30" class="seat" onclick="ChangeColor('seat30')">E2</div>
-            <div id="seat31" class="seat" onclick="ChangeColor('seat31')">E3</div>
+                <!-- <input type="checkbox" id="seat6" name="seat6" class="seat" onclick="ChangeColor('seat6')" value="B{{i+1}}">-->
 
-            <div id="seat" class="seat occupied">E4</div>
-            <div id="seat" class="seat occupied">E5</div>
+                <div class="inputGroup">
+                    <input id="option2{{i+1}}" name="seat2{{i+1}}" type="checkbox" value = "B{{i+1}}"/>
+                    <label for="option2{{i+1}}">B{{i+1}}</label>
+                </div> &emsp;
 
-            <div id="seat32" class="seat" onclick="ChangeColor('seat32')">E6</div>
-            <div id="seat33" class="seat" onclick="ChangeColor('seat33')">E7</div>
-            <div id="seat34" class="seat" onclick="ChangeColor('seat34')">E8</div>
+                {%endfor%}
 
-        </div>
-        <div class="row">
-            <div id="seat35" class="seat" onclick="ChangeColor('seat35')">F1</div>
-            <div id="seat36" class="seat" onclick="ChangeColor('seat36')">F2</div>
-            <div id="seat37" class="seat" onclick="ChangeColor('seat37')">F3</div>
-            <div id="seat38" class="seat" onclick="ChangeColor('seat38')">F4</div>
+            </div>
+            <div class="row">
+                {%for i in range(0, 8)%}
 
-            <div id="seat" class="seat occupied">F5</div>
-            <div id="seat" class="seat occupied">F6</div>
-            <div id="seat" class="seat occupied">F7</div>
-            <div id="seat39" class="seat" onclick="ChangeColor('seat39')">F8</div>
+                <!-- <button id="seat12" name="seat12" class="seat" onclick="ChangeColor('seat12')">C{{i+1}}</button> -->
 
-        </div>
+
+                <div class="inputGroup">
+                    <input id="option3{{i+1}}" name="seat3{{i+1}}" type="checkbox" value = "C{{i+1}}"/>
+                    <label for="option3{{i+1}}">C{{i+1}}</label>
+                </div> &emsp;
+
+
+                <!-- <div id="seat" name="seat" class="seat occupied">C7</div> -->
+                {%endfor%}
+
+            </div>
+            <div class="row">
+                {%for i in range(0, 8)%}
+
+                <!-- <a href="{{i+1}}"> <button id="seat18" name="seat18" class="seat"
+                    onclick="ChangeColor('seat18')">D{{i+1}}</button> </a> -->
+
+                <div class="inputGroup">
+                    <input id="option4{{i+1}}" name="seat4{{i+1}}" type="checkbox" value = "D{{i+1}}"/>
+                    <label for="option4{{i+1}}">D{{i+1}}</label>
+                </div> &emsp;
+
+                {%endfor%}
+
+            </div>
+            <div class="row">
+                {%for i in range(0, 8)%}
+
+                <!-- <button id="seat29" name="seat29" class="seat" onclick="ChangeColor('seat29')">E{{i+1}}</button> -->
+
+                <div class="inputGroup">
+                    <input id="option5{{i+1}}" name="seat5{{i+1}}" type="checkbox" value = "E{{i+1}}"/>
+                    <label for="option5{{i+1}}">E{{i+1}}</label>
+                </div> &emsp;
+
+                {%endfor%}
+
+            </div>
+            <div class="row">
+                {%for i in range(0, 8)%}
+
+                <!-- <button id="seat35" name="seat35" class="seat" onclick="ChangeColor('seat35')">F{{i+1}}</button> -->
+                <div class="inputGroup">
+                    <input id="option6{{i+1}}" name="seat6{{i+1}}" type="checkbox" value = "F{{i+1}}"/>
+                    <label for="option6{{i+1}}">F{{i+1}}</label>
+                </div> &emsp;
+
+                {%endfor%}
+
+               
     </div>
+    </div>
+
+    <br><br><br>
+
+    <div class="col-sm d-flex justify-content-center">
+        <button type="submit" class="btn-paynow" id="paynow">
+            Paynow
+        </button>
+    </div>
+</form>
 
     <!-- <p class="text" style="font-size: 1em;margin:0px 0px 15px 0px">
         You have selected <span id="count">0</span> s
@@ -130,12 +278,6 @@
                     Home
                 </button>
             </a>
-        </div>
-
-        <div class="col-sm d-flex justify-content-center">
-            <button class="btn-paynow" id="paynow">
-                Paynow
-            </button>
         </div>
     </div>
 
