--- a/Backend/templates/adminPage.html
+++ b/Backend/templates/adminPage.html
@@ -66,35 +66,35 @@
     <ul class="nav justify-content-center">
         <li class="nav-item">
             <a href="/"><button type="button" class="btn btn-success text-center pad"
-                    style="width: 300px; height: 200px; font-size: 30px;">Home</button></a>
+                    style="width: 300px; height: 200px; font-size: 30px; font-family: serif;">Home</button></a>
         </li>
 
 
         <li class="nav-item">
             <button type="button" id="addTheater" class="btn btn-success text-center pad"
-                style="width: 300px; height: 200px;  font-size: 30px;">Add Theater</button>
+                style="width: 300px; height: 200px;  font-size: 30px; font-family: serif;">Add Theater</button>
         </li>
 
 
         <li class="nav-item">
             <button type="button" id="addMovie" class="btn btn-success text-center pad"
-                style="width: 300px; height: 200px;  font-size: 30px;">Add Movies</button>
+                style="width: 300px; height: 200px;  font-size: 30px; font-family: serif;">Add Movies</button>
         </li>
 
 
         <li class="nav-item">
             <a href="/BookNowNew"><button type="button" class="btn btn-success text-center pad"
-                    style="width: 300px; height: 200px;  font-size: 30px;">Show</button></a>
+                    style="width: 300px; height: 200px; font-size: 30px; font-family: serif;">Show</button></a>
         </li>
 
         <li class="nav-item">
             <button id="deleteMovie" type="button" class="btn btn-success text-center pad"
-                style="width: 300px; height: 200px;  font-size: 30px;">Delete Movies</button>
+                style="width: 300px; height: 200px;  font-size: 30px; font-family: serif;">Delete Movies</button>
         </li>
 
         <li class="nav-item">
             <button id="deleteTheater" type="button" class="btn btn-success text-center pad"
-                style="width: 300px; height: 200px;  font-size: 30px;">Delete Theater</button>
+                style="width: 300px; height: 200px;  font-size: 30px; font-family: serif;">Delete Theater</button>
         </li>
 
 
