firebase adition on seatbooking

--- a/Backend/templates/SeatBooking.html
+++ b/Backend/templates/SeatBooking.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Movie Seat Booking</title>
@@ -133,14 +133,16 @@
         </div>
 
         <div class="col-sm d-flex justify-content-center">
-            <button class="btn-paynow" id="paynow">
+            <button class="btn-paynow" id="payBtn">
                 Paynow
             </button>
         </div>
     </div>
 
-    <script type="module" src="{{ url_for('static', filename='/JS/SeatBooking.js') }}"></script>
-
+    <script type="module" src="{{ url_for('static', filename='/JS/SeatBooking.js') }}">
+        localStorage.setItem("token", "{{token}}");
+    </script>
+   
 </body>
 
 </html>
