--- a/Backend/static/CSS/RegisterLogin.css
+++ b/Backend/static/CSS/RegisterLogin.css
@@ -40,7 +40,7 @@
 .bg-image {
     /* background-repeat: no-repeat; */
     /* background-size: cover; */
-    background-image: url("../../static/Images/thor1.jpg");
+    background-image: url("../../static/Images/theater.jpg");
     position: fixed;
     top: 0;
     width: 100%;
