--- a/Backend/templates/adminlogin.html
+++ b/Backend/templates/adminlogin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/RegisterLogin.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/RegisterLoginAdmin.css')}}">
 
 
 
@@ -53,7 +53,7 @@
                                             class="btn-block btn-lg gradient-custom-4 text-body registerbtn">Login </button>
                                     </div>
 
-                                    <p class="text-center text-muted mt-5 mb-0 form-label">Not a member ? <a
+                                    <p class="text-center text-muted mt-5 mb-0 form-label" >Not a member ? <a
                                             href="/adminregistration" class="fw-bold text-body"><u
                                                 class="form-label">Register</u></a>
                                     </p>
